--- a/kcms/feedback/CMakeLists.txt
+++ b/kcms/feedback/CMakeLists.txt
@@ -17,7 +17,7 @@ kcmutils_generate_desktop_file (kcm_feedback)
 target_link_libraries(kcm_feedback
     KF6::I18n
     KF6::KCMUtils
-    KF6::QuickAddons
+    KF6::KCMUtilsQuick
     KUserFeedbackCoreQt6
 )
 
