--- a/kcms/notifications/CMakeLists.txt
+++ b/kcms/notifications/CMakeLists.txt
@@ -17,7 +17,7 @@ target_link_libraries(kcm_notifications
     KF6::GlobalAccel
     KF6::GuiAddons
     KF6::I18n
-    KF6::QuickAddons
+    KF6::KCMUtilsQuick
     KF6::NotifyConfig
     KF6::Service
     PW::LibNotificationManager
