--- a/kcms/style/CMakeLists.txt
+++ b/kcms/style/CMakeLists.txt
@@ -41,10 +41,11 @@ kcmutils_generate_desktop_file(kcm_style)
 target_compile_definitions(kcm_style PUBLIC CMAKE_INSTALL_FULL_LIBEXECDIR="${CMAKE_INSTALL_FULL_LIBEXECDIR}")
 
 target_link_libraries(kcm_style
+    Qt::Quick
     KF6::KCMUtils
     KF6::I18n
     KF6::KIOCore
-    KF6::QuickAddons
+    KF6::KCMUtilsQuick
     KF6::Archive
     KF6::NewStuffCore
     KF6::XmlGui
