install p5support stuff in proper places

--- a/dataengines/geolocation/CMakeLists.txt
+++ b/dataengines/geolocation/CMakeLists.txt
@@ -22,7 +22,7 @@ install(FILES geolocationprovider.h ${CMAKE_CURRENT_BINARY_DIR}/geolocation_expo
         DESTINATION ${KDE_INSTALL_INCLUDEDIR}/plasma/geolocation
         COMPONENT Devel)
 
-kcoreaddons_add_plugin(plasma_engine_geolocation SOURCES geolocation.cpp INSTALL_NAMESPACE plasma/dataengine)
+kcoreaddons_add_plugin(plasma_engine_geolocation SOURCES geolocation.cpp INSTALL_NAMESPACE plasma5support/dataengine)
 target_compile_definitions(plasma_engine_geolocation PRIVATE -DQT_NO_KEYWORDS)
 generate_export_header(plasma_engine_geolocation EXPORT_FILE_NAME "geolocation_export.h" BASE_NAME "GEOLOCATION")
 target_link_libraries(plasma_engine_geolocation
