Make it compile against imported KCMUtils classes

--- a/kcms/componentchooser/CMakeLists.txt
+++ b/kcms/componentchooser/CMakeLists.txt
@@ -29,7 +29,7 @@ target_link_libraries(kcm_componentchooser
     Qt::Core
     KF6::CoreAddons
     KF6::I18n
-    KF6::QuickAddons
+    KF6::KCMUtilsQuick
     KF6::Service
     KF6::KIOWidgets
     KF6::ConfigGui
