--- a/logout-greeter/CMakeLists.txt
+++ b/logout-greeter/CMakeLists.txt
@@ -13,8 +13,8 @@ target_link_libraries(ksmserver-logout-greeter
     Qt::Quick
     Qt::DBus
     KF6::I18n
+    KF6::PlasmaQuick
     KF6::Package
-    KF6::QuickAddons
     KF6::WindowSystem
     KF6::ConfigCore
     X11::X11
