--- a/runners/kill/CMakeLists.txt
+++ b/runners/kill/CMakeLists.txt
@@ -12,18 +12,17 @@ target_link_libraries(kcm_krunner_kill
     Qt::Core
     Qt::Gui
     KF6::CoreAddons
-    KF6::ConfigCore
+    KF6::KCMUtils
     KF6::I18n
     KF6::Completion
-    KF6::ConfigWidgets
     KF6::Runner
     )
 
 kcoreaddons_add_plugin(krunner_kill SOURCES killrunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
 target_link_libraries(krunner_kill
                       KF6::I18n
+                      KF6::ConfigCore
                       KF6::Completion
-                      KF6::ConfigWidgets
                       KF6::AuthCore
                       KF6::Runner
                       KSysGuard::ProcessCore
