Use SystemSettings versionless executable
Instead of the deprecated versioned symlink which is removed
in Plasma6 (https://phabricator.kde.org/T14763)

--- a/libtaskmanager/autotests/data/applications/kcm_kdeconnect.desktop
+++ b/libtaskmanager/autotests/data/applications/kcm_kdeconnect.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Exec=systemsettings5 kcm_kdeconnect
+Exec=systemsettings kcm_kdeconnect
 Icon=preferences-kde-connect
 Type=Service
 
