Add missing dependencies in .kde-ci.yml

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -36,7 +36,9 @@ Dependencies:
     'frameworks/kparts': '@latest-kf6'
     'frameworks/krunner': '@latest-kf6'
     'frameworks/kservice': '@latest-kf6'
+    'frameworks/ktexteditor': '@latest-kf6'
     'frameworks/ktextwidgets': '@latest-kf6'
+    'frameworks/kunitconversion': '@latest-kf6'
     'frameworks/kwallet': '@latest-kf6'
     'frameworks/kwidgetsaddons': '@latest-kf6'
     'frameworks/kwindowsystem': '@latest-kf6'
