--- a/kcms/feedback/CMakeLists.txt
+++ b/kcms/feedback/CMakeLists.txt
@@ -1,19 +1,14 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"kcm_feedback\")
 
-set(kcm_feedback_PART_SRCS feedback.cpp)
+kcmutils_add_qml_kcm(kcm_feedback SOURCES feedback.cpp)
 
-kcmutils_generate_module_data(
-    kcm_feedback_PART_SRCS
+kcmutils_generate_module_data(kcm_feedback
     MODULE_DATA_HEADER feedbackdata.h
     MODULE_DATA_CLASS_NAME FeedbackData
     SETTINGS_HEADERS feedbacksettings.h
     SETTINGS_CLASSES FeedbackSettings
 )
-
-kconfig_add_kcfg_files(kcm_feedback_PART_SRCS feedbacksettings.kcfgc GENERATE_MOC)
-kcoreaddons_add_plugin(kcm_feedback SOURCES ${kcm_feedback_PART_SRCS} INSTALL_NAMESPACE "plasma/kcms/systemsettings")
-kcmutils_generate_desktop_file (kcm_feedback)
-
+kconfig_add_kcfg_files(kcm_feedback feedbacksettings.kcfgc GENERATE_MOC)
 target_link_libraries(kcm_feedback
     KF6::I18n
     KF6::KCMUtils
@@ -28,4 +23,3 @@ ecm_qt_declare_logging_category(kcm_feedback
 )
 
 install(FILES feedbacksettings.kcfg DESTINATION ${KDE_INSTALL_KCFGDIR})
-kpackage_install_package(package kcm_feedback kcms)
