--- a/kcms/nightcolor/CMakeLists.txt
+++ b/kcms/nightcolor/CMakeLists.txt
@@ -17,8 +17,7 @@ kcmutils_generate_module_data(
 
 kconfig_add_kcfg_files(kcm_nightcolor_SRCS nightcolorsettings.kcfgc GENERATE_MOC)
 
-kcoreaddons_add_plugin(kcm_nightcolor SOURCES ${kcm_nightcolor_SRCS} INSTALL_NAMESPACE "plasma/kcms/systemsettings")
-kcmutils_generate_desktop_file(kcm_nightcolor)
+kcmutils_add_qml_kcm(kcm_nightcolor SOURCES ${kcm_nightcolor_SRCS})
 
 target_link_libraries(kcm_nightcolor
     KF6::KCMUtilsQuick
@@ -30,4 +29,3 @@ target_link_libraries(kcm_nightcolor
 
 install(FILES worldmap.png DESTINATION ${KDE_INSTALL_DATADIR}/plasma/nightcolor)
 
-kpackage_install_package(package kcm_nightcolor kcms)
