Adjust to new KPackage namespace for structures
See https://invent.kde.org/frameworks/kpackage/-/merge_requests/73

--- a/shell/packageplugins/layouttemplate/CMakeLists.txt
+++ b/shell/packageplugins/layouttemplate/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_package_layouttemplate\")
 
-kcoreaddons_add_plugin(plasma_packagestructure_layoutemplate SOURCES layouttemplate.cpp INSTALL_NAMESPACE "kpackage/packagestructure")
+kcoreaddons_add_plugin(plasma_packagestructure_layoutemplate SOURCES layouttemplate.cpp INSTALL_NAMESPACE "kf6/packagestructure")
 
 target_link_libraries(plasma_packagestructure_layoutemplate
    KF6::I18n
