--- a/shell/packageplugins/lookandfeel/CMakeLists.txt
+++ b/shell/packageplugins/lookandfeel/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_package_lookandfeel\")
 
-kcoreaddons_add_plugin(plasma_packagestructure_lookandfeel SOURCES lookandfeel.cpp INSTALL_NAMESPACE "kpackage/packagestructure")
+kcoreaddons_add_plugin(plasma_packagestructure_lookandfeel SOURCES lookandfeel.cpp INSTALL_NAMESPACE "kf6/packagestructure")
 
 target_link_libraries(plasma_packagestructure_lookandfeel
    KF6::I18n
