shell/packageplugins: Call file/dir definitions without translations
Depends on https://invent.kde.org/frameworks/kpackage/-/merge_requests/74

--- a/shell/packageplugins/lookandfeel/CMakeLists.txt
+++ b/shell/packageplugins/lookandfeel/CMakeLists.txt
@@ -1,9 +1,3 @@
-add_definitions(-DTRANSLATION_DOMAIN=\"plasma_package_lookandfeel\")
-
 kcoreaddons_add_plugin(plasma_packagestructure_lookandfeel SOURCES lookandfeel.cpp INSTALL_NAMESPACE "kf6/packagestructure")
-
-target_link_libraries(plasma_packagestructure_lookandfeel
-   KF6::I18n
-   KF6::Package
-)
+target_link_libraries(plasma_packagestructure_lookandfeel KF6::Package)
 set_target_properties(plasma_packagestructure_lookandfeel PROPERTIES OUTPUT_NAME plasma_lookandfeel)
