shell/packageplugins: Simplify CMake code
Just write a simple wrapper so that we do not have to repeat the linking + plugin creation bits

--- a/shell/packageplugins/CMakeLists.txt
+++ b/shell/packageplugins/CMakeLists.txt
@@ -1,5 +1,10 @@
-add_subdirectory(layouttemplate)
-add_subdirectory(lookandfeel)
-add_subdirectory(shell)
-add_subdirectory(qmlWallpaper)
-add_subdirectory(wallpaperimages)
+function(install_package_structure name source)
+    kcoreaddons_add_plugin(${name} SOURCES ${source} INSTALL_NAMESPACE "kf6/packagestructure")
+    target_link_libraries(${name} KF6::Package)
+endfunction()
+
+install_package_structure(plasma_layouttemplate layouttemplate/layouttemplate.cpp)
+install_package_structure(plasma_lookandfeel lookandfeel/lookandfeel.cpp)
+install_package_structure(plasma_wallpaper qmlWallpaper/wallpaper.cpp)
+install_package_structure(plasma_shell shell/shellpackage.cpp)
+install_package_structure(wallpaper_images wallpaperimages/wallpaperpackage.cpp)
