Introduce porting aid xdg-shell integration plugin fork
In order to port plasma to the layer-shell protocol, plasma must be able
to create a popup with a layer surface as the parent.

With Qt 6.5 and older, there's no nicer way other than provide a custom
shell integration plugin. In Qt 6.6, we introduced an API that
layer-shell-qt could use to associate xdg popups with it.

Qt 6.6 will be released in September if everything goes smooth, but it's
not ideal to wait until that point to start the porting process.

This change introduces a temporary fork of the xdg-shell integration
plugin to allow us start the porting process now. When Qt 6.6 is released,
the fork shell integration plugin will be dropped.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -315,6 +315,10 @@ set_package_properties(KIOFuse PROPERTIES DESCRIPTION "Provide KIO support to le
                                       TYPE RUNTIME
                                       )
 
+if(Qt6WaylandClient_VERSION VERSION_LESS "6.6.0")
+    pkg_check_modules(XKBCOMMON xkbcommon REQUIRED IMPORTED_TARGET)
+endif()
+
 # Clipboard applet
 ecm_find_qmlmodule(org.kde.prison 1.0)
 
@@ -396,6 +400,10 @@ add_subdirectory(menu)
 add_subdirectory(phonon)
 
 add_subdirectory(interactiveconsole)
+
+if(Qt6WaylandClient_VERSION VERSION_LESS "6.6.0")
+    add_subdirectory(qtwayland-integration)
+endif()
 
 # This ensures pressing the eject button on a CD drive ejects the disc
 # It listens to the Solid::OpticalDrive::ejectPressed signal that is only
