--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -63,6 +63,7 @@ Dependencies:
     'libraries/plasma-wayland-protocols': '@latest-kf6'
     'libraries/kuserfeedback': '@stable'
     'graphics/libkexiv2': '@latest-kf6'
+    'third-party/appstream': '@latest'
 
 - 'on': ['Linux']
   'require':
