Fix link errors when building with Qt 6.5.0.
Don't use Q_DECL_EXPORT anymore since we need to use our own macros.
To not confuse import with export when building/linking libraries, etc.

--- a/kcms/cursortheme/CMakeLists.txt
+++ b/kcms/cursortheme/CMakeLists.txt
@@ -11,7 +11,7 @@ xcursor/sortproxymodel.cpp
 ../kcms-common.cpp
 )
 
-include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/xcursor/ )
+include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/xcursor/ ${CMAKE_CURRENT_BINARY_DIR}/../krdb/ )
 
 ########### next target ###############
 
