--- a/kcms/krdb/CMakeLists.txt
+++ b/kcms/krdb/CMakeLists.txt
@@ -2,6 +2,11 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"krdb\")
 
 add_library(krdb krdb.cpp)
+
+generate_export_header(krdb)
+
+target_include_directories(krdb PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>" "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>" "$<INSTALL_INTERFACE:${KDE_INSTALL_INCLUDEDIR}/krdb>")
+
 target_link_libraries(krdb PRIVATE Qt::Widgets Qt::DBus KF6::CoreAddons KF6::DBusAddons KF6::GuiAddons KF6::I18n KF6::WindowSystem KF6::ConfigWidgets X11::X11)
 if (QT_MAJOR_VERSION EQUAL "5")
     target_link_libraries(krdb PRIVATE Qt6::X11Extras)
@@ -10,3 +15,8 @@ else()
 endif()
 
 install(TARGETS krdb ${KDE_INSTALL_TARGETS_DEFAULT_ARGS} LIBRARY NAMELINK_SKIP)
+
+install(FILES krdb.h
+    ${CMAKE_CURRENT_BINARY_DIR}/krdb_export.h
+    DESTINATION ${KDE_INSTALL_INCLUDEDIR}/krdb COMPONENT Devel
+)
