runners: Clean up/refactor CMake code
This includes for example a more target-centric approach and formatting issues while at it

--- a/runners/appstream/CMakeLists.txt
+++ b/runners/appstream/CMakeLists.txt
@@ -1,14 +1,10 @@
 add_definitions(-DTRANSLATION_DOMAIN="plasma_runner_appstream")
 
-set(krunner_appstream_SRCS
-    appstreamrunner.cpp
-)
+kcoreaddons_add_plugin(krunner_appstream SOURCES appstreamrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
 
-ecm_qt_declare_logging_category(krunner_appstream_SRCS
+ecm_qt_declare_logging_category(krunner_appstream
     HEADER debug.h
     IDENTIFIER RUNNER_APPSTREAM
     CATEGORY_NAME org.kde.plasma.runner.appstream
     DEFAULT_SEVERITY Warning)
-
-kcoreaddons_add_plugin(krunner_appstream SOURCES ${krunner_appstream_SRCS} INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_appstream PUBLIC Qt::Gui KF6::Runner KF6::I18n KF6::Service AppStreamQt)
