--- a/runners/bookmarks/CMakeLists.txt
+++ b/runners/bookmarks/CMakeLists.txt
@@ -1,11 +1,18 @@
-########### next target ###############
-#set(EXTERNAL_LIBS KIOCore Qt::Script KF6::Plasma Qt::Sql)
-
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_bookmarksrunner\")
 
-find_package(Qt${QT_MAJOR_VERSION} CONFIG REQUIRED COMPONENTS Sql)
+find_package(Qt6 CONFIG REQUIRED COMPONENTS Sql)
 
-set(krunner_bookmarks_common_SRCS
+add_library(krunner_bookmarks_common STATIC)
+set_property(TARGET krunner_bookmarks_common PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+ecm_qt_declare_logging_category(krunner_bookmarks_common
+    HEADER bookmarks_debug.h
+    IDENTIFIER RUNNER_BOOKMARKS
+    CATEGORY_NAME org.kde.plasma.runner.bookmarks
+    DEFAULT_SEVERITY Warning
+)
+
+target_sources(krunner_bookmarks_common PRIVATE
     bookmarkmatch.cpp
     faviconfromblob.cpp
     favicon.cpp
@@ -17,15 +24,6 @@ set(krunner_bookmarks_common_SRCS
     browsers/opera.cpp
     browsers/falkon.cpp
 )
-
-ecm_qt_declare_logging_category(krunner_bookmarks_common_SRCS
-    HEADER bookmarks_debug.h
-    IDENTIFIER RUNNER_BOOKMARKS
-    CATEGORY_NAME org.kde.plasma.runner.bookmarks
-    DEFAULT_SEVERITY Warning
-)
-
-add_library(krunner_bookmarks_common STATIC ${krunner_bookmarks_common_SRCS})
 target_link_libraries(krunner_bookmarks_common
     Qt::Sql
     KF6::KIOCore
@@ -35,9 +33,7 @@ target_link_libraries(krunner_bookmarks_common
     KF6::Bookmarks
 )
 
-set_property(TARGET krunner_bookmarks_common PROPERTY POSITION_INDEPENDENT_CODE ON)
-
-kcoreaddons_add_plugin(krunner_bookmarksrunner SOURCES bookmarksrunner.cpp browserfactory.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_bookmarksrunner SOURCES bookmarksrunner.cpp browserfactory.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_bookmarksrunner krunner_bookmarks_common)
 
 # Currently tests include only chrome, so no need to get include them if json is not found
