--- a/runners/services/CMakeLists.txt
+++ b/runners/services/CMakeLists.txt
@@ -1,16 +1,16 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_services\")
 
-set(krunner_services_SRCS
-    servicerunner.cpp
-)
+add_library(krunner_services_static STATIC servicerunner.cpp)
+set_property(TARGET krunner_services_static PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-ecm_qt_declare_logging_category(krunner_services_SRCS
+ecm_qt_declare_logging_category(krunner_services_static
     HEADER debug.h
     IDENTIFIER RUNNER_SERVICES
     CATEGORY_NAME org.kde.plasma.runner.services
     DEFAULT_SEVERITY Warning)
 
-add_library(krunner_services_static STATIC ${krunner_services_SRCS})
 target_link_libraries(krunner_services_static
     KF6::CoreAddons
     KF6::KIOGui
@@ -21,12 +21,8 @@ target_link_libraries(krunner_services_static
     KF6::Activities
 )
 
-set_property(TARGET krunner_services_static PROPERTY POSITION_INDEPENDENT_CODE ON)
-
-kcoreaddons_add_plugin(krunner_services SOURCES plugin.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
-target_link_libraries(krunner_services
-    krunner_services_static
-)
+kcoreaddons_add_plugin(krunner_services SOURCES plugin.cpp INSTALL_NAMESPACE "kf6/krunner")
+target_link_libraries(krunner_services krunner_services_static)
 
 if(BUILD_TESTING)
    add_subdirectory(autotests)
