--- a/runners/calculator/CMakeLists.txt
+++ b/runners/calculator/CMakeLists.txt
@@ -1,15 +1,4 @@
-
-########### next target ###############
-
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_calculatorrunner\")
-
-set(EXTERNAL_LIBS
-    KF6::KIOCore
-    KF6::Runner
-    KF6::I18n
-    Qt::Network
-    Qt::Widgets
-)
 
 set(qalculate_engine_SRCS
     qalculate_engine.cpp
@@ -23,10 +12,14 @@ set(krunner_calculatorrunner_SRCS
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated")
 kde_enable_exceptions()
 
-kcoreaddons_add_plugin(calculator SOURCES ${qalculate_engine_SRCS} ${krunner_calculatorrunner_SRCS} INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(calculator SOURCES ${qalculate_engine_SRCS} ${krunner_calculatorrunner_SRCS} INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(calculator
-                      PkgConfig::QALCULATE
-                      ${EXTERNAL_LIBS}
+    PkgConfig::QALCULATE
+    KF6::KIOCore
+    KF6::Runner
+    KF6::I18n
+    Qt::Network
+    Qt::Widgets
 )
 
 if(BUILD_TESTING)
