--- a/runners/kill/CMakeLists.txt
+++ b/runners/kill/CMakeLists.txt
@@ -1,13 +1,8 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_kill\")
 
-set(kcm_krunner_kill_SRCS
-    killrunner_config.cpp
-    killrunner_config.h
-)
-
-ki18n_wrap_ui(kcm_krunner_kill_SRCS killrunner_config.ui)
-kcoreaddons_add_plugin(kcm_krunner_kill SOURCES ${kcm_krunner_kill_SRCS} INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner/kcms")
+kcoreaddons_add_plugin(kcm_krunner_kill SOURCES killrunner_config.h killrunner_config.cpp INSTALL_NAMESPACE "kf6/krunner/kcms")
 target_compile_definitions(kcm_krunner_kill PRIVATE -DKRUNNER_PLUGIN_NAME="krunner_kill")
+ki18n_wrap_ui(kcm_krunner_kill killrunner_config.ui)
 target_link_libraries(kcm_krunner_kill
     Qt::Core
     Qt::Gui
@@ -16,14 +11,14 @@ target_link_libraries(kcm_krunner_kill
     KF6::I18n
     KF6::Completion
     KF6::Runner
-    )
+)
 
-kcoreaddons_add_plugin(krunner_kill SOURCES killrunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_kill SOURCES killrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_kill
-                      KF6::I18n
-                      KF6::ConfigCore
-                      KF6::Completion
-                      KF6::AuthCore
-                      KF6::Runner
-                      KSysGuard::ProcessCore
-                      )
+    KF6::I18n
+    KF6::ConfigCore
+    KF6::Completion
+    KF6::AuthCore
+    KF6::Runner
+    KSysGuard::ProcessCore
+)
