--- a/runners/places/CMakeLists.txt
+++ b/runners/places/CMakeLists.txt
@@ -1,11 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_placesrunner\")
 
-set(krunner_placesrunner_SRCS
-    placesrunner.cpp
-    placesrunner.h
-)
-
-kcoreaddons_add_plugin(krunner_placesrunner SOURCES ${krunner_placesrunner_SRCS} INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_placesrunner SOURCES placesrunner.h placesrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_placesrunner
     KF6::KIOCore
     KF6::KIOFileWidgets
