--- a/runners/recentdocuments/CMakeLists.txt
+++ b/runners/recentdocuments/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_recentdocuments\")
 
-kcoreaddons_add_plugin(krunner_recentdocuments SOURCES recentdocuments.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_recentdocuments SOURCES recentdocuments.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_recentdocuments
     KF6::KIOCore
     KF6::KIOWidgets
