--- a/runners/shell/CMakeLists.txt
+++ b/runners/shell/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_shell\")
 
-kcoreaddons_add_plugin(krunner_shell SOURCES shellrunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_shell SOURCES shellrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_shell
     KF6::KIOCore
     KF6::KIOGui
@@ -12,6 +12,6 @@ target_link_libraries(krunner_shell
 )
 
 if(BUILD_TESTING)
-add_subdirectory(autotests)
+    add_subdirectory(autotests)
 endif()
 
