--- a/runners/windowedwidgets/CMakeLists.txt
+++ b/runners/windowedwidgets/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_windowedwidgets\")
 
-kcoreaddons_add_plugin(krunner_windowedwidgets SOURCES windowedwidgetsrunner.cpp INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/krunner")
+kcoreaddons_add_plugin(krunner_windowedwidgets SOURCES windowedwidgetsrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
 target_link_libraries(krunner_windowedwidgets KF6::Plasma KF6::I18n KF6::Runner)
