runners: Add SPDX info to CMakeLists.txt files
I did lots of changes in those files over the last years. Also, the author doesn't really matter, because 'git log' used for possible relicense checks

According to the KDE licensing policy, alls CMake files should be BSD licensed and BSD-3 is strongly discouraged. See https://community.kde.org/Policies/Licensing_Policy

--- a/runners/CMakeLists.txt
+++ b/runners/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 if(KF6Baloo_FOUND)
  add_subdirectory(baloo)
 endif()
