--- a/runners/baloo/CMakeLists.txt
+++ b/runners/baloo/CMakeLists.txt
@@ -1,5 +1,6 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_baloosearch5\")
-
 
 set(baloosearchrunner_SRCS
     baloosearchrunner.cpp
