--- a/runners/locations/CMakeLists.txt
+++ b/runners/locations/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_locations\")
 
 kcoreaddons_add_plugin(locations SOURCES locationrunner.h locationrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
