--- a/runners/powerdevil/CMakeLists.txt
+++ b/runners/powerdevil/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_powerdevil\")
 
 kcoreaddons_add_plugin(krunner_powerdevil SOURCES PowerDevilRunner.h PowerDevilRunner.cpp INSTALL_NAMESPACE "kf6/krunner")
