--- a/runners/webshortcuts/CMakeLists.txt
+++ b/runners/webshortcuts/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_webshortcuts\")
 
 kcoreaddons_add_plugin(krunner_webshortcuts SOURCES webshortcutrunner.cpp webshortcutrunner.h INSTALL_NAMESPACE "kf6/krunner")
