--- a/runners/windowedwidgets/CMakeLists.txt
+++ b/runners/windowedwidgets/CMakeLists.txt
@@ -1,3 +1,5 @@
+# SPDX-FileCopyrightText: 2023 Alexander Lohnau <alexander.lohnau@gmx.de>
+# SPDX-License-Identifier: BSD-2-Clause
 add_definitions(-DTRANSLATION_DOMAIN=\"plasma_runner_windowedwidgets\")
 
 kcoreaddons_add_plugin(krunner_windowedwidgets SOURCES windowedwidgetsrunner.cpp INSTALL_NAMESPACE "kf6/krunner")
