Remove windows build leftovers
plasma-workspace is for Linux/BSD only

--- a/ktimezoned/CMakeLists.txt
+++ b/ktimezoned/CMakeLists.txt
@@ -1,10 +1,4 @@
-if (WIN32)
-    set(kded_ktimezoned_SRCS ktimezoned_win.cpp ktimezoned_win.h)
-else ()
-    set(kded_ktimezoned_SRCS ktimezoned.cpp ktimezoned.h)
-endif ()
-
-kcoreaddons_add_plugin(ktimezoned SOURCES ${kded_ktimezoned_SRCS}  INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kded")
+kcoreaddons_add_plugin(ktimezoned SOURCES ktimezoned.cpp ktimezoned.h INSTALL_NAMESPACE "kf${QT_MAJOR_VERSION}/kded")
 
 #qt_add_dbus_adaptor(kded_ktimezoned_SRCS org.kde.KTimeZoned ktimezonedbus.h DBusHandler)
 
