Fix description for baloo search runner
Baloo has not been related to contact and mail searches
for a long time.

--- a/runners/baloo/plasma-runner-baloosearch.desktop
+++ b/runners/baloo/plasma-runner-baloosearch.desktop
@@ -58,7 +58,7 @@ Name[vi]=Tìm kiếm ở bàn làm việc
 Name[x-test]=xxDesktop Searchxx
 Name[zh_CN]=桌面搜索
 Name[zh_TW]=桌面搜尋
-Comment=Searches through files, emails and contacts
+Comment=Searches for files by name and content
 Comment[ar]=يبحث في الملفات، والبريد الإلكتروني والمتراسلين
 Comment[az]=Fayllar, e-poçtlar və tərkiblər arası axtarış edir
 Comment[be]=Пошук у файлах, электронных лістах і кантактах
@@ -114,8 +114,6 @@ Comment[zh_TW]=搜尋檔案、電子郵件與聯絡人
 X-KDE-ServiceTypes=Plasma/Runner
 Type=Service
 Icon=baloo
-X-KDE-PluginInfo-Author=Vishesh Handa
-X-KDE-PluginInfo-Email=me@vhanda.in
 X-KDE-PluginInfo-Name=baloosearch
 X-KDE-PluginInfo-Version=1.0
 X-KDE-PluginInfo-License=LGPL
