--- a/shell/autotests/mockserver/CMakeLists.txt
+++ b/shell/autotests/mockserver/CMakeLists.txt
@@ -45,6 +45,7 @@ else()
     qt6_generate_wayland_protocol_client_sources(SharedClientTest FILES
         ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-primary-output-v1.xml
         ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-output-order-v1.xml
+        ${PLASMA_WAYLAND_PROTOCOLS_DIR}/kde-screen-edge-v1.xml
     )
     qt6_generate_wayland_protocol_server_sources(SharedClientTest FILES
         ${Wayland_DATADIR}/wayland.xml
